2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/scripts/chimera-focus:
	* src/scripts/chimera-cam:
	* src/scripts/chimera:
	* src/scripts/chimera-tel: Add Ctrl+C support.

	* src/scripts/chimera-dome: Ctrl+C support.
	Remove slit position from output (it's buggy on LNA).

2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/util/coord.py: Lot of changes.
	Allow use of Coord outise Chimera.
	Much better d2dms conversion with configurable precision.
	Improved strfcoord using configurable precision of d2dms.
	Fix bug when priting 01-09 seconds with only onde digit.
	New math behavviour: Use other state onçy with strings.

	* src/chimera/util/position.py: Allow position to be used outside
	Chimera.

	* src/chimera/util/tests/test_coord.py: Improved test suite.
	* src/chimera/util/tests/hipparcos-tycho.dat: New test suite
	database.

2008-05-13  P. Henrique Silva  <henrique@astro.ufsc.br>

	* src/chimera/controllers/scheduler:
	* src/chimera/controllers/scheduler/programs.py:
	* src/chimera/controllers/scheduler/clock.py:
	* src/chimera/controllers/scheduler/dummy.py:
	* src/chimera/controllers/scheduler/sensors.py:
	* src/chimera/controllers/scheduler/exposures.py:
	* src/chimera/controllers/scheduler/__init__.py:
	* src/chimera/controllers/scheduler/model.py:
	* src/chimera/controllers/scheduler/schedulers.py:
	* src/chimera/controllers/scheduler/machine.py:
	* src/chimera/controllers/scheduler/program.db:
	* src/chimera/controllers/scheduler/database.py:
	* src/chimera/controllers/scheduler/constraints.py:
	* src/chimera/controllers/scheduler/program.py:
	* src/chimera/controllers/scheduler/sequential.py:
	* src/chimera/controllers/scheduler/tests:
	* src/chimera/controllers/scheduler/tests/test_model.py:
	* src/chimera/controllers/scheduler/tests/__init__.py:
	* src/chimera/controllers/scheduler/create-tables.py:
	* src/chimera/controllers/scheduler/scheduler.py:
	* src/chimera/controllers/scheduler/program.xml: